--- a/index.css
+++ b/index.css
@@ -11,6 +11,7 @@
     display:flex;
     flex-direction:row;
     margin-bottom:40px;
+    background:url(https://cdn1.vectorstock.com/i/1000x1000/97/35/seamless-space-background-vector-20669735.jpg);
 }
 .myName{
     display:flex;
@@ -20,6 +21,7 @@
 }
 .myName h1{
     font-family:arial;
+    color:white;
 }
 .links{
     display:flex;
@@ -47,7 +49,7 @@
     height:400px;
     flex-flow:row wrap;
     width:400px;
-    
+    border:1px double black;
     margin-left:50px;
     background:url(https://picsum.photos/400);
     box-sizing:border-box;
@@ -82,5 +84,31 @@
     border:1px solid black;
     margin:auto;
     
+}
+.footer{
+    display:flex;
+    flex-flow:column;
+    height:60px;
+    border:2px solid black;
+    justify-content:center;
+    align-items:center;
+    background:lightgray;
+    
+}
+.footer h2{
+    font-family:arial;
+    display:flex
+}
+.footer a{
+    color:white;
+    border:1px solid black;
+    background:gray;
+    text-shadow:1px 1px black;
+    border-radius:2px;
+}
+.footer a:hover{
+    color:black;
+    background:white;
+    text-shadow:1px 1px gray;
 }
 
